# RL-Agents

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: tasks.json
docs/: HARDWARE.md  RESULTS.md  SETUP.md
scripts/: build_db.py  gen_tasks.py  preflight.py  watch_gpu.sh
src/agent_sql/: __init__.py  config.py
src/agent_sql/data/: generate_tasks.py  tasks.py
src/agent_sql/db/: build.py  schema.sql
src/agent_sql/env/: graph.py
src/agent_sql/eval/: baselines.py
src/agent_sql/tools/: sql_tools.py
src/agent_sql/utils/: gpu.py  logging.py
tests/: test_env.py  test_tools.py
