[project]
name = "grpo-sql-agent"
version = "0.1.0"
description = "GRPO-trained multi-turn SQL agent (Qwen2.5-1.5B) vs a prompted GPT-4o-mini baseline, through the same LangGraph harness."
requires-python = ">=3.10,<3.13"
dependencies = [
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "openai>=1.40",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Training stack. Install INSIDE WSL2 ONLY — vLLM does not run on native
# Windows. Exact pins are deliberately deferred to docs/SETUP.md: the
# unsloth/vllm/torch combination is fragile and must be pinned against
# whatever CUDA toolkit lands in WSL at install time.
train = [
    "unsloth",
    "trl",
    "vllm",
]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_sql"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
